--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
     
     <div id="credit">
       <footer>
-        <p>powered by <a href="https://leafletjs.com/">leaflet</a> | KIT Map from <a
-            href="https://twitter.com/klzusan">@klzusan (Twitter)</a></p>
+        <p>候補が出ない場合は一文字消してみてください(例:「オルタス」→「オルタ」)<br>
+          powered by <a href="https://leafletjs.com/">leaflet</a> | KIT Map from 
+          <a href="https://twitter.com/klzusan">@klzusan (Twitter)</a>
+        </p>
       </footer>
     </div>
 
